--- a/MarqueeActivity/app/build.gradle
+++ b/MarqueeActivity/app/build.gradle
@@ -1,6 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'maven'
-apply plugin: 'singing'
+apply plugin: 'signing'
+
+grounp = 'com.github.lijuncai'
+version = '0.1.0-SNAPSHOT'
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
+repositories {
+    mavenCentral();
+}
 
 android {
     compileSdkVersion 19
@@ -17,6 +26,80 @@ android {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    signing {
+        sign configurations.archives
+    }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs = ['src/main/java', 'build/generated/source/apt/${variant.dirName}']
+            resources.srcDirs = ['src/main/resources']
+            res.srcDirs = ['src/main/res']
+            assets.srcDirs = ['src/main/assets']
+        }
+    }
+
+
+
+
+    task javadocJar(type: Jar) {
+        classifier = 'javadoc'
+        from 'build/docs/javadoc'
+    }
+
+    task sourcesJar(type: Jar) {
+        classifier = 'sources'
+        from sourceSets.main
+    }
+
+    artifacts {
+        archives javadocJar, sourcesJar
+    }
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+                repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                    authentication(userName: "admin", password: "admin123")
+                }
+
+                snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                    authentication(userName: "lijuncai1988", password: "ljc1988629")
+                }
+
+                pom.project {
+                    name 'Example Application'
+                    packaging 'jar'
+                    // optionally artifactId can be defined here
+                    description 'A application used as an example on how to set up pushing  its components to the Central Repository.'
+                    url 'https://github.com/lijuncai/Marquee'
+
+                    scm {
+                        connection 'scm:svn:http://foo.googlecode.com/svn/trunk/'
+                        developerConnection 'scm:svn:https://foo.googlecode.com/svn/trunk/'
+                        url 'http://foo.googlecode.com/svn/trunk/'
+                    }
+
+                    licenses {
+                        license {
+                            name 'The Apache License, Version 2.0'
+                            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        }
+                    }
+
+                    developers {
+                        developer {
+                            id 'marquee'
+                            name 'JunCai Li'
+                            email '61060866@qq.com'
+                        }
+                    }
+                }
+            }
         }
     }
 }
